Revision history for Hailo

{{$NEXT}}

0.53 2010-10-15 21:29:02

    - hailo command: Fix off-by-one error when reporting the number of lines
      learned when training.

    - Don't truncate the brain file after loading it with in_memory enabled.

    - Word tokenizer improvements:
      * Recognize "´" as an apostrophe when matching words.
      * Recognize a compound word like "anti-scientology" as a single word.
      * Put additional constraints on where a "normal word" can be matched.
        This enables it to match things like "3D" and "800x600" as single
        words.
      * Fix capitalization of words after sentences which end with dashed
        words like "anti-scientology".
      * Convert chunks to ASCII before looking for a URI to work around a
        limitation in Regexp::Common.
      * Recognize ssh:// (and foo+ssh://) URIs.

0.52 2010-07-18 22:40:02

    - Hailo no longer passes references to itself to its slave
      classes, so it's garbage collected at the right time.

      This bug broke the hybrid disk <-> in_memory SQLite mode, it's
      now fixed again. The test that was supposed to check whether the
      hybrid in-memory backend worked did the opposite of what it was
      supposed to do, and didn't work anyway due to how it was set up.

    - Giving arguments to Hailo's save method (they're passed to the
      Storage class) never worked due to a trivial error. Now it does.

0.51 2010-07-18 15:49:41

    - Bump dependencies for all modules to the latest CPAN
      versions. This avoids the issues Moose had with I<Can't locate
      object method "add_method" via package "Moose::Meta::Role">, and
      various other problems that might be present in older modules.

    - MooseX::Getopt renames its help attribute to help_flag in
      0.30. That broke hailo --help, work around it by checking if the
      help_flag attribute exists in
      any_moose('X::Getopt::GLD')->meta->get_attribute_list. By